# swagger_go/out/go-gin-server/go/api_test_.go
@@ -1,0 +1,22 @@
+/*
+ * Swagger Petstore
+ *
+ * This is a sample server Petstore server.  You can find out more about     Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).      For this sample, you can use the api key `special-key` to test the authorization     filters.
+ *
+ * API version: 1.0.0
+ * Contact: apiteam@swagger.io
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+// Test - Test Endpoint
+func Test(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{})
+}
